--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     },
     "require": {
         "php": ">=5.4.0",
-        "illuminate/auth": "5.0.*",
-        "illuminate/database": "5.0.*",
-        "illuminate/support": "5.0.*"
+        "illuminate/auth": "^5.1",
+        "illuminate/database": "^5.1",
+        "illuminate/support": "^5.1"
     }
 }
